--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Github Actions</title>
 </head>
 <body>
-    <h1>This is my productions</h1>
+    <h1>This is my staging</h1>
 </body>
 </html>
